fix: use object-fit fill to prevent spine image clipping

--- a/static/style.css
+++ b/static/style.css
@@ -202,7 +202,7 @@ main {
 .spine-face img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: fill;
     display: block;
 }
 
